<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_slogan">Water Quality System</string>
    <string name="compost">Compost</string>
    <string name="soil">Soil</string>
    <string name="water">Water</string>
    <string name="copyright">Copyright © ffem</string>
    <string name="legal_info">Legal Information</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="testing">Testing</string>
    <string name="align_color_card">Align the color card within the view above</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="close">Close</string>
    <string name="camera">Camera</string>
    <string name="delete">Delete</string>
    <string name="delete_selected_result">Delete selected result?</string>
    <string name="deleted">Deleted</string>

    <!-- Software notices -->
    <string name="software_notices">Software Notices</string>
    <string name="camera_permission">Camera permission is required</string>
...
    <string name="version_has_expired">This version of the app has expired.</string>
    <string name="uninstall_install_from_store">Please uninstall and then install the latest version from Play Store.</string>

    <string name="result_list">List of results</string>
    <string name="no_data">No test results yet</string>
    <string name="tap_to_start">Tap the <b>+</b> button below to\nlaunch a new test.</string>
    <string name="start_test">Start test</string>
    <string name="compost_test">Compost Test</string>
    <string name="soil_test">Soil Test</string>
    <string name="card_test">Simple Card Test</string>
    <string name="colorimetric_test">Colorimetric Test</string>
    <string name="titration_test">Titration Test</string>
    <string name="external_meter">External Meter</string>
...
    <string name="invalid_image">Invalid image</string>
    <string name="result">Result</string>
    <string name="analyzed_photo">Analyzed Photo</string>
    <string name="color_extracts">Colors detected</string>
    <string name="confirm_color_extract">If the color detection above is incorrect, redo the capture with better light conditions.</string>
    <string name="result_image">Result image</string>
    <string name="start">Start</string>
    <string name="instructions">Instructions</string>
    <string name="place_card_and_cuvette">Place the card and cuvette with the water sample on the provided stand.</string>
    <string name="when_ready_camera">When ready, point the phone camera at it.</string>
    <string name="click_launch_camera">Click <b>Start</b> below to launch the camera preview.</string>
    <string name="camera_start_align_card">When the camera starts, align the card in the viewer as shown in the example above.</string>
    <string name="continue_on">Continue</string>
    <string name="redo">Redo</string>
    <string name="navigate_up">Navigate up</string>
    <string name="analyzing_photo">Analyzing photo…</string>
    <string name="brightness">Brightness</string>
    <string name="closer">Closer</string>
    <string name="too_close">Too close</string>
...
    <string name="high">High</string>

    <string name="low_alkalinity">Acidic</string>
    <string name="medium_alkalinity">Neutral</string>
    <string name="high_alkalinity">Basic</string>

    <string name="margin_of_error">Margin of error: ±</string>
    <string name="check_color_card">Check that the correct color card is being used. Also ensure that the card is placed in a well lit area with indirect lighting.</string>
    <string name="details">Details</string>
    <string name="no_image_selected">Using camera. Sample image not selected.</string>
    <string name="test_mode_image_selected">Test Mode. Sample Image: %s</string>

    <!--App Update-->
...
    <string name="update_download_fail">Unable to download update</string>
    <string name="restart">Restart</string>
    <string name="retry">Retry</string>

    <string name="ammonia" tools:keep="@string/ammonia">Ammonia</string>
    <string name="dissolved_oxygen" tools:keep="@string/dissolved_oxygen">Dissolved Oxygen</string>
    <string name="fluoride" tools:keep="@string/fluoride">Fluoride</string>
    <string name="fluoride_high_range" tools:keep="@string/fluoride_high_range">Fluoride - High Range</string>
    <string name="iron" tools:keep="@string/iron">Iron</string>
    <string name="nitrate" tools:keep="@string/nitrate">Nitrate</string>
    <string name="nitrite" tools:keep="@string/nitrite">Nitrite</string>
    <string name="nitrogen" tools:keep="@string/nitrogen">Nitrogen</string>
    <string name="organic_carbon" tools:keep="@string/organic_carbon">Organic Carbon</string>
...
    <string name="error_test_not_available">Requested test is not available</string>
    <string name="please_contact_support">Please contact technical support</string>
    <string name="cannot_start_test">Cannot start test</string>
    <string name="error">Error</string>
    <string name="required">Required</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="calibrate">Calibrate</string>
    <string name="select_test">Select Test</string>
    <string name="calibrate_summary">Calibrate using a standard</string>
    <string name="calibrated_successfully">%s calibrated successfully</string>
    <string name="tilt_backwards">Tilt phone backwards</string>
    <string name="tilt_forwards">Tilt phone forwards</string>
...
    <string name="risk_5_l3">High</string>
    <string name="risk_6_l3">High</string>
    <string name="risk_7_l3">High</string>

    <string name="low_quantity">Sufficient</string>
    <string name="medium_quantity">Insufficient</string>
    <string name="high_quantity">Too high</string>

    <string name="risk_1_quantity">Sufficient</string>
    <string name="risk_2_quantity">Insufficient</string>
    <string name="risk_3_quantity">Too high</string>

    <string name="risk_0_alkalinity">Extremely Acidic</string>
...
