<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:key="preferenceCategoryData"
        android:title="@string/data"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:iconSpaceReserved="false">
        <Preference
            android:key="@string/data_delete_key"
            android:summary="Permanently delete all test results and photos of samples"
            android:title="@string/delete_data"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="preferenceCategoryLegacy"
        android:title="Legacy"
        app:allowDividerAbove="true"
        app:iconSpaceReserved="false">
        <CheckBoxPreference
            android:key="@string/useColorCardVersion1"
            android:summary="Use older barcode color card"
            android:title="Use the older Barcode Color card"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true"
            app:iconSpaceReserved="false" />

        <CheckBoxPreference
            android:dependency="@string/useColorCardVersion1"
            android:key="@string/manualCaptureOnlyKey"
            android:summary="For barcode color card, turn this on if the auto photo capture is not working well on this phone"
            android:title="@string/manual_photo_capture"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>
</androidx.preference.PreferenceScreen>
